--- a/templates/tickets.html
+++ b/templates/tickets.html
@@ -27,7 +27,7 @@
         </form>
 
         <div class="mt-4">
-            <a href="{{ url_for('index') }}" class="text-blue-600 hover:underline">
+            <a href="{{ url_for('home') }}" class="text-blue-600 hover:underline">
                 ⬅ Back to Dashboard
             </a>
         </div>
