--- a/templates/home.html
+++ b/templates/home.html
@@ -6,5 +6,6 @@
     <img src="{{ user.avatar_url }}" alt="Avatar" class="w-24 h-24 rounded-full mx-auto mb-4">
     <h1 class="text-2xl font-bold">Welcome, {{ user.username }}!</h1>
     <p class="mt-2 text-gray-600 dark:text-gray-300">Glad to see you here.</p>
+    <p class="mt-4">Total time spent on server: <strong>{{ user.total_time }}</strong></p>
   </div>
 {% endblock %}
