--- a/templates/tickets.html
+++ b/templates/tickets.html
@@ -12,7 +12,7 @@
       </div>
     {% endif %}
     {% if not has_open_ticket %}
-    <form method="POST" action="/tickets" enctype="multipart/form-data">
+    <form method="POST" action="/ticket" enctype="multipart/form-data">
       <label for="username" class="block text-sm font-medium mb-2">Your Discord Username:</label>
       <input type="text" id="username" name="username" required class="w-full p-2 rounded border border-gray-300 dark:border-gray-600 dark:bg-gray-700">
 
